--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                 font-size: 150%
             }
         }
+        img{
+            width: 100%;
+            display: block;
+            height: auto;
+        }
     </style>
     
     </head>
@@ -88,13 +93,16 @@
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 
                 <div class="item active">
-                    <img src="Images/cat.jpg" alt="New York">
+                    <img src="Images/A1New.jpg" alt="New York">
                     <div class="carousel-caption">
                         <h3>Love You</h3>
                         <p>From: Neolin</p>
@@ -102,15 +110,35 @@
                 </div>
 
                 <div class="item">
-                    <img src="Images/cat2.jpg" alt="Chicago">
+                    <img src="Images/N1New.jpg" alt="Chicago">
                     <div class="carousel-caption">
                         <h3>Best Mom Ever</h3>
                         <p>From Wesley</p>
                     </div> 
                 </div>
-
                 <div class="item">
-                    <img src="Images/cat3.jpg" alt="Los Angeles">
+                    <img src="Images/W1New.jpg" alt="Los Angeles">
+                    <div class="carousel-caption">
+                        <h3>Miss You</h3>
+                        <p>From Cassie</p>
+                    </div> 
+                </div>
+                <div class="item">
+                    <img src="Images/A2.jpg" alt="Los Angeles">
+                    <div class="carousel-caption">
+                        <h3>Miss You</h3>
+                        <p>From Cassie</p>
+                    </div> 
+                </div>
+                <div class="item">
+                    <img src="Images/L2New.jpg" alt="Los Angeles">
+                    <div class="carousel-caption">
+                        <h3>Miss You</h3>
+                        <p>From Cassie</p>
+                    </div> 
+                </div>
+                <div class="item">
+                    <img src="Images/Y1New.jpg" alt="Los Angeles">
                     <div class="carousel-caption">
                         <h3>Miss You</h3>
                         <p>From Cassie</p>
