--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <li data-target="#myCarousel" data-slide-to="2"></li>
                 <li data-target="#myCarousel" data-slide-to="3"></li>
                 <li data-target="#myCarousel" data-slide-to="4"></li>
-                <li data-target="#myCarousel" data-slide-to="5"></li>
+                <!--<li data-target="#myCarousel" data-slide-to="5"></li>-->
             </ol>
 
             <!-- Wrapper for slides -->
@@ -173,13 +173,13 @@
                         <p>From Cassie</p>
                     </div> 
                 </div>
-                <div class="item" it>
+             <!--   <div class="item" it>
                     <img src="Images/L2New.jpg" alt="Los Angeles">
                     <div class="carousel-caption">
                         <h3>A Happy Mothers day to you</h3>
                         <p>From Linus</p>
                     </div> 
-                </div>
+                </div>-->
                 <div class="item it">
                     <img src="Images/Y1New.jpg" alt="Los Angeles">
                     <div class="carousel-caption">
